Реализовал запросы с фидбеком
